Changed Finalizer Entropy to not use a finalizer